syntax = "proto3";

package powermanage.v1;

option go_package = "github.com/manchtools/power-manage/sdk/gen/go/powermanage/v1;powermanagev1";

import "google/protobuf/timestamp.proto";
import "powermanage/v1/auth.proto";

// =============================================================================
// USER MANAGEMENT SERVICE
// =============================================================================

service UserService {
  // Create a new user (admin only)
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Get user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // List users with pagination
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // Update user (admin only, or self for display_name)
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // Delete user (admin only)
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // Generate registration code for passkey enrollment
  rpc CreateRegistrationCode(CreateRegistrationCodeRequest) returns (CreateRegistrationCodeResponse);

  // List registration codes
  rpc ListRegistrationCodes(ListRegistrationCodesRequest) returns (ListRegistrationCodesResponse);

  // Revoke a registration code
  rpc RevokeRegistrationCode(RevokeRegistrationCodeRequest) returns (RevokeRegistrationCodeResponse);

  // List user's WebAuthn credentials
  rpc ListCredentials(ListCredentialsRequest) returns (ListCredentialsResponse);

  // Revoke a WebAuthn credential
  rpc RevokeCredential(RevokeCredentialRequest) returns (RevokeCredentialResponse);

  // Rename a WebAuthn credential
  rpc RenameCredential(RenameCredentialRequest) returns (RenameCredentialResponse);
}

// =============================================================================
// USER CRUD
// =============================================================================

message CreateUserRequest {
  // @gotags: validate:"required,min=3,max=50,alphanum"
  string username = 1;
  // @gotags: validate:"required,min=1,max=100"
  string display_name = 2;
  // @gotags: validate:"required,oneof=0 1 2"
  UserRole role = 3;
  // If true, also generate a registration code
  bool generate_registration_code = 4;
}

message CreateUserResponse {
  User user = 1;
  // Registration code if requested
  optional RegistrationCode registration_code = 2;
}

message GetUserRequest {
  // @gotags: validate:"required,min=1"
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  // @gotags: validate:"omitempty,gte=0,lte=100"
  int32 page_size = 1;
  // @gotags: validate:"omitempty"
  string page_token = 2;
  // Filter by role
  optional UserRole role_filter = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message UpdateUserRequest {
  // @gotags: validate:"required,min=1"
  string user_id = 1;
  // @gotags: validate:"omitempty,min=1,max=100"
  optional string display_name = 2;
  optional UserRole role = 3;  // Admin only
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  // @gotags: validate:"required,min=1"
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

// =============================================================================
// REGISTRATION CODES
// =============================================================================

message RegistrationCode {
  string id = 1;
  string code = 2;  // The actual code to give to user
  string user_id = 3;  // User this code is for
  string username = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp expires_at = 6;
  bool used = 7;
  optional google.protobuf.Timestamp used_at = 8;
}

message CreateRegistrationCodeRequest {
  // @gotags: validate:"required,min=1"
  string user_id = 1;
  // Duration in seconds (default 24h)
  // @gotags: validate:"omitempty,min=60,max=604800"
  optional int64 expires_in_seconds = 2;
}

message CreateRegistrationCodeResponse {
  RegistrationCode registration_code = 1;
}

message ListRegistrationCodesRequest {
  int32 page_size = 1;
  string page_token = 2;
  // Filter by user
  optional string user_id = 3;
  // Filter by status
  optional bool include_used = 4;
  optional bool include_expired = 5;
}

message ListRegistrationCodesResponse {
  repeated RegistrationCode registration_codes = 1;
  string next_page_token = 2;
}

message RevokeRegistrationCodeRequest {
  // @gotags: validate:"required,min=1"
  string code_id = 1;
}

message RevokeRegistrationCodeResponse {
  bool success = 1;
}

// =============================================================================
// CREDENTIAL MANAGEMENT
// =============================================================================

message ListCredentialsRequest {
  // If not set, returns credentials for current user
  optional string user_id = 1;
}

message ListCredentialsResponse {
  repeated WebAuthnCredential credentials = 1;
}

message RevokeCredentialRequest {
  // @gotags: validate:"required,min=1"
  string credential_id = 1;
}

message RevokeCredentialResponse {
  bool success = 1;
}

message RenameCredentialRequest {
  // @gotags: validate:"required,min=1"
  string credential_id = 1;
  // @gotags: validate:"required,min=1,max=100"
  string new_name = 2;
}

message RenameCredentialResponse {
  WebAuthnCredential credential = 1;
}
